--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
   <artifactId>cityweather2</artifactId>
   <version>1.0.0</version>
   <packaging>war</packaging>
+  
+  <properties>    
+    <slf4j.version>1.7.9</slf4j.version>    
+    <!-- test dependencies properties -->
+    <junit.version>4.12</junit.version>    
+  </properties>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -33,17 +40,21 @@
 	<dependency>
 		<groupId>com.sap.cloud</groupId>
 		<artifactId>neo-java-web-api</artifactId>
-		<version>3.72.12</version>		
-	</dependency>
+		<version>3.72.12</version>
+		<scope>provided</scope>		
+	</dependency>	
 	<dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+        <scope>provided</scope>
+      </dependency>    
+		
+	 <dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
-		<version>4.12</version>
-	</dependency>
-	<dependency>
-    	<groupId>org.slf4j</groupId>
-    	<artifactId>slf4j-api</artifactId>
-    	<version>1.7.25</version>
-	</dependency>
+		<version>${junit.version}</version>
+		<scope>test</scope>
+	 </dependency>
 </dependencies>
 </project>
